--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GabrielaMontes_Examen1P2
-main.class=gabrielamontes_examen1p2.GabrielaMontes_Examen1P2
+main.class=gabrielamontes_examen1p2.Pantalla
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
